[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["rahulgs12 <gsr1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
modal-client = "^0.49.2130"
transformers = "^4.28.1"
torch = "^2.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
